# gnome-shell-theme-tweaked

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
tweaked1/: Makefile.am  theme  tweaked1.scss
